--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <title>Title</title>
 </head>
 <body>
+<p>Films</p>
+<script src="js/practice.js"></script>
+<script src="js/function.js"></script>
 <script src="js/script.js"></script>
 </body>
 </html>
