--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
 </head>
 <body>
 <p>Films</p>
-<script src="js/practice.js"></script>
+<script src="js/array.js"></script>
+<!--<script src="js/practice.js"></script>
 <script src="js/function.js"></script>
-<script src="js/script.js"></script>
+<script src="js/script.js"></script>-->
 </body>
 </html>
